--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 button[type="button"],
-button[type="submit"] {
+button[type="submit"],
+.btn {
   @apply bg-gray-600 flex justify-center items-center text-gray-200 px-3 py-2 border border-gray-200 rounded-lg;
 }
 
