--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-button[type="button"],
 button[type="submit"],
 .btn {
   @apply bg-gray-600 flex justify-center items-center text-gray-200 px-3 py-2 border border-gray-200 rounded-lg;
@@ -37,4 +36,23 @@ button[type="submit"] {
   border-bottom-left-radius: 0;
   padding: 2px 6px;
   pointer-events: none;
+}
+.editor-btns {
+  button {
+    @apply border rounded-md py-1 px-2 text-sm text-gray-600;
+  }
+  button.active {
+    @apply bg-gray-300  text-gray-900;
+  }
+}
+
+.tiptap {
+  @apply p-2 border rounded-md;
+  &:focus-visible {
+    outline: 0;
+    @apply border-blue-500;
+  }
+  h2 {
+    @apply text-2xl;
+  }
 }
