--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,22 +37,23 @@ button[type="submit"] {
   padding: 2px 6px;
   pointer-events: none;
 }
-.editor-btns {
-  button {
-    @apply border rounded-md py-1 px-2 text-sm text-gray-600;
-  }
-  button.active {
-    @apply bg-gray-300  text-gray-900;
-  }
+.editor-btns button {
+  @apply border rounded-md py-1 px-2 text-sm text-gray-600;
+}
+
+.editor-btns button.active {
+  @apply bg-gray-300 text-gray-900;
 }
 
 .tiptap {
   @apply p-2 border rounded-md;
-  &:focus-visible {
-    outline: 0;
-    @apply border-blue-500;
-  }
-  h2 {
-    @apply text-2xl;
-  }
+}
+
+.tiptap:focus-visible {
+  outline: 0;
+  @apply border-blue-500;
+}
+
+.tiptap h2 {
+  @apply text-2xl;
 }
